<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrueFleet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">TruFleet</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">LOGIN</string>
    <string name="attempts">Attempts Left:</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_order_login">Order Details</string>
    <string name="Logout">LOGOUT</string>
    <string name ="localhost">"http://127.0.0.1:8080/"</string>
    <string name = "androidEmulator">"http://10.0.2.2:8080/"</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_order">Order Details</string>

    <string name="ordertype_prompt">Order Type</string>
    <string name ="linehaultype_prompt">Linehaul Type</string>
    <string name="picture_accept">Send to server?</string>
    <string name="button_accept_picture">Send to server</string>
    <string name="button_reject_picture">Cancel</string>
    <string-array name="order_types">
        <item>Active Orders</item>
        <item>Completed Orders</item>

    </string-array>
    <string-array name="linehaul_types">
        <item>Active Linehauls</item>
        <item>Inactive Linehauls</item>
        <item>Completed Linehauls</item>

    </string-array>



</resources>