<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />



    <EditText
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="135dp"
        android:layout_alignRight="@+id/buttonLogin"
        android:layout_alignLeft="@+id/buttonLogin">

        <requestFocus />
    </EditText>



    <EditText
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableLeft="@drawable/password"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_below="@+id/textUsername"
        android:layout_alignRight="@+id/textUsername"
        android:layout_alignLeft="@+id/textUsername" />
<!--
    <Button
        android:id="@+id/buttonLogin"
        android:onClick="login"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/button_signin"
        style="@style/ButtonText"
        android:shadowColor="#6C9AA8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Login"
        android:layout_below="@+id/textPassword"
        android:layout_centerHorizontal="true" /> -->


    <view
        class="com.gc.materialdesign.views.ButtonRectangle"
        android:id="@+id/buttonLogin"

        android:onClick="login"
        android:textSize="50sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@color/accent"
        android:text="@string/Login"
        android:layout_below="@+id/textPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/attempts"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/buttonLogin"
        android:visibility="gone"
        android:layout_alignRight="@+id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/buttonLogin"
        android:visibility="gone"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignBottom="@+id/textView4" />

</RelativeLayout>